fix jumping navigation on admin page

--- a/tasa_website/static/css/tasa.css
+++ b/tasa_website/static/css/tasa.css
@@ -8,6 +8,10 @@ body {
 	line-height: 200%;
 }
 
+html {
+    overflow-y:scroll;
+}
+
 .navbar {
 	background-color: #000000;
 	background: #000000;
